<resources>
    <string name="app_name">SOS App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_help_now">Get Help Now</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="display_saved_contacts">Display Saved Contacts</string>
    <string name="save">Save</string>
    <string name="contact_phone_no">Contact Phone No</string>
    <string name="create_new_contact">Create New Contact</string>
    <string name="contact_name">Contact Name</string>
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="contact">Contact</string>
    <string name="you_have_not_made_any_request">You have not made any request</string>
    <string name="click_the_camera_icon_to_get_started">Click the camera icon to get started</string>
    <string name="contacts">Contacts</string>
    <string name="my_requests">My Requests</string>
</resources>